--- a/SE350-Final-Task/package.json
+++ b/SE350-Final-Task/package.json
@@ -9,10 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.18.1",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "axios": "^1.4.0",
     "expo": "~48.0.15",
+    "expo-auth-session": "^4.0.3",
+    "expo-random": "^13.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.7"
+    "react-native": "0.71.7",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-pager-view": "^6.2.0",
+    "react-native-safe-area-context": "^4.5.1",
+    "react-native-screens": "^3.20.0",
+    "react-native-svg": "^13.9.0",
+    "react-native-tab-view": "^3.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
