--- a/SE350-Final-Task/package.json
+++ b/SE350-Final-Task/package.json
@@ -17,13 +17,14 @@
     "expo-auth-session": "^4.0.3",
     "expo-random": "^13.1.1",
     "expo-status-bar": "~1.4.4",
+    "lottie-react-native": "^5.1.5",
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-chart-kit": "^6.12.0",
     "react-native-pager-view": "^6.2.0",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
-    "react-native-svg": "^13.9.0",
+    "react-native-svg": "13.4.0",
     "react-native-tab-view": "^3.5.1"
   },
   "devDependencies": {
